--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "api-rest",
+  "name": "node-server",
   "version": "1.0.0",
-  "main": "date.js",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "express": "^4.19.2"
-  },
   "devDependencies": {
     "nodemon": "^3.1.4"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
+  
 }
